--- a/Desafio 2 - Recriando o Netflix/index.html
+++ b/Desafio 2 - Recriando o Netflix/index.html
@@ -26,6 +26,7 @@
         <div class="principal">
             <div class="container">
                 <h3 class="titulo">Breves Respostas Para Grandes Questões</h3>
+                <h2 class="subtitulo">Stephen Hawking</h2>
                 <p class="descricao">Com prefácio de Eddie Redmayne, que ganhou o Oscar por interpretar Hawking no cinema, introdução do Nobel de física Kip Thorne e posfácio comovente de Lucy Hawking, sua filha, "Breves Respostas Para Grandes Questões" não é apenas a última mensagem de um grande gênio: é seu presente final para a humanidade.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
