--- a/Desafio 2 - Recriando o Netflix/index.html
+++ b/Desafio 2 - Recriando o Netflix/index.html
@@ -96,5 +96,8 @@
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/main.js"></script>
+    <footer>
+        <p class="foot">Uma cortesia de Guilherme Balthar</p>
+    </footer>
 </body>
 </html>
